src/css/style.css
/* GOOGLE FONTS */
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@500&family=Lexend+Deca&display=swap");

:root {
  /* Colors */
  --color-primary: #ffffff;
  --color-secondary: #1a202c;
  --color-third: #717171;

  --color-fourth: #574ae8;
  --color-fifth: #3ea1db;

  /* font weight */
  --fw-regular: 400;
  --fw-medium: 500;
}

/* || General styles */

*,
*::after,
*::before {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

*:focus,
*:focus-visible {
  outline: var(--color-secondary) dashed 4px;
  outline-offset: 6px;
}

a:link {
  text-decoration: none;
}

ul,
ol {
  list-style: none;
}

img {
  max-width: 100%;
  display: block;
}

input {
  font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

body {
  font-family: Arial, Helvetica, sans-serif;
  background: #f3f5f7;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  min-height: 100vh;
}

.container {
  max-width: 59.25rem;
  padding: 0 1.25rem;
  margin: 0 auto;
}

/* || HEADER */
.header {
  background: linear-gradient(
    90deg,
    var(--color-fourth) 0%,
    var(--color-fifth) 100%
  );
  padding: 2.563rem 0;
}

.header__box {
  display: flex;
  justify-content: space-between;
  font: var(--fw-regular) 1.5rem / 1.25 "Lexend Deca", sans-serif;
  color: var(--color-primary);
  margin-bottom: 4.5rem;
}

.header__logo:link,
.header__logo:visited {
  color: inherit;
}

.header__form {
  background-color: rgba(255, 255, 255, 0.2);
  display: grid;
  border-radius: 0.313rem;
}

.header__icon {
  grid-area: 1 / -1;
  align-self: center;
  margin-left: 1.25rem;
}

.header__search {
  grid-area: 1 / -1;
  font: var(--fw-medium) 1.125rem / 1.22 "Inter", sans-serif;
  background: none;
  border: none;
  padding: 1.313rem 4rem;
  color: var(--color-primary);
}

::placeholder {
  font: inherit;
  color: rgba(255, 255, 255, 0.5);
}

/* || ARTICLES  */

.articles {
  padding: 6.25rem 0;
}

.articles__list {
  display: grid;
  row-gap: 3.125rem;
}

.articles__item {
  position: relative;
}

.articles__icon {
  position: absolute;
  top: 1.438rem;
  right: 1.625rem;
}

.articles__icon {
  fill: #574ae801;
  stroke: var(--color-fourth);
  stroke-width: 7;
  cursor: pointer;
  width: 1.375rem;
  height: 1.188rem;
  transition: 0.4s ease-in-out;
}

.articles__icon.active,
.articles__icon:hover {
  fill: var(--color-fourth);
}

.articles__box:link,
.articles__box:visited {
  display: block;
  width: 100%;
  height: 100%;
  padding: 1.438rem 1.563rem 1.563rem 1.5rem;
  background: var(--color-primary);
  border-radius: 0.313rem;
  box-shadow: 0 0 0.625rem rgba(19, 19, 31, 0.05);
}

.articles__header {
  display: flex;
  justify-content: space-between;
  margin-bottom: 1.25rem;
  color: var(--color-third);
}

.artiles__date {
  font: var(--fw-regular) 1rem / 1.25 "Lexend Deca", sans-serif;
}

.articles__title {
  font: var(--fw-regular) 1.625rem / 1.23 "Lexend Deca", sans-serif;
  margin-bottom: 0.5rem;
  color: var(--color-secondary);
}

.articles__desc {
  font: var(--fw-medium) 1.125rem / 1.78 "Lexend Deca", sans-serif;
  color: var(--color-third);
}

@media (max-width: 34.063em) {
  .header {
    padding: 3rem 0;
  }

  .header__box {
    font: var(--fw-regular) 1.125rem / 1.22 "Lexend Deca", sans-serif;
    margin-bottom: 2.563rem;
  }

  .header__icon {
    width: 1rem;
    margin-left: 0.563rem;
  }

  .header__search {
    font: var(--fw-medium) 0.875rem / 1.21 "Inter", sans-serif;
    padding: 0.75rem 2.375rem;
  }

  .articles {
    padding: 3.125rem 0;
  }

  .articles__list {
    row-gap: 1.563rem;
  }

  .articles__box:link,
  .articles__box:visited {
    padding: 1rem 0.75rem 0.938rem 0.938rem;
  }

  .artiles__date {
    font: var(--fw-regular) 0.875rem / 1.29 "Lexend Deca", sans-serif;
  }

  .articles__title {
    font: var(--fw-regular) 1.125rem / 1.22 "Lexend Deca", sans-serif;
  }

  .articles__desc {
    font: var(--fw-medium) 0.875rem / 1.85 "Lexend Deca", sans-serif;
    color: var(--color-third);
  }

  .articles__icon {
    width: 0.563rem;
  }
}

